Added help for custom banners

--- a/index.html
+++ b/index.html
@@ -794,7 +794,8 @@
                 </ul>
                 <li>Paste the newsletter/code to where you need it</li>
               </ol>
-            </div><div class="card">
+            </div>
+            <div class="card">
               <h3 class="card-title">How to <strong>Load / Save</strong> the Newsletter Options & Posts</h3>
               <p><strong><small>If options/posts have been saved locally you'll recieve a popup in the bottom right to quickly load them when you open the newsletter generator
                 <br>(Hover over the <strong><i class="fas fa-question-circle" style="color: #aeaeae;"></i></strong> or each button for tips)</small></strong></p>
@@ -814,6 +815,39 @@
                   <li><strong>Save Posts Locally</strong> will save your posts into your browser</li>
                   <li><small><strong>Import Posts</strong> will load a .json file containing your posts</small></li>
                   <li><small><strong>Export Posts</strong> will save a .json file containing your posts</small></li>
+                </ul>
+              </ol>
+            </div>
+            <div class="card">
+              <h3 class="card-title">How to use a <strong>Custom Banner</strong></h3>
+              <p><strong><small>If you're looking for pre-made banner image urls please look here: <a href="https://siteforward.ca/tools/image-bank" target="_blank">https://siteforward.ca/tools/image-bank</a></small></strong></p>
+              <ol>
+                <li>Go to the <strong>Tools</strong> tab</li>
+                <li>Insert a banner image URL</li>
+                <ul style="list-style-type: square">
+                  <li><strong>Image Alignment</strong> is the alignment of your banner image</li>
+                </ul>
+                <li>Modify the title and subtitle</li>
+                <ul style="list-style-type: square">
+                  <li><strong>Title Size</strong> is the font size for your title</li>
+                  <li><strong>Subtitle Size</strong> is the font size for your subtitle</li>
+                  <li><strong>Title Spacing</strong> is the space between your title and subtitle</li>
+                  <li><strong>Text Vertical Offset</strong> is the vertical offset for your titles</li>
+                  <li><strong>Text Horizontal Offset</strong> is the horizontal offset for your titles</li>
+                  <li><strong>Text Alignment</strong> is the alignment of your titles</li>
+                </ul>
+                <li>Enable/Disable your shadow on your text</li>
+                <ul style="list-style-type: square">
+                  <li><strong>Shadow Vertical Offset</strong> is the offset on your shadow for the titles</li>
+                  <li><strong>Shadow Horizontal Offset</strong> is the offset on your shadow for the titles</li>
+                  <li><strong>Shadow Blur</strong> is the blurriness of the shadow</li>
+                </ul>
+                <li>Modify your logo image</li>
+                <ul style="list-style-type: square">
+                  <li><strong>Banner Logo URL</strong> is an image to inset on your banner</li>
+                  <li><strong>Logo Vertical Offset</strong> is the offset on your logo</li>
+                  <li><strong>Logo Horizontal Offset</strong> is the offset on your logo</li>
+                  <li><strong>Logo Width</strong> is the width of the logo image</li>
                 </ul>
               </ol>
             </div>
