Removed broken button Changed card style

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             <div class="form-item even">
               <input type="button" value="Copy Code" @click="copyNewsletterCode">
               <input type="button" value="Copy Newsletter" @click="copyNewsletter">
-              <input type="button" value="Copy For MS Word" @click="copyNewsletterWord">
+              <!-- <input type="button" value="Copy For MS Word" @click="copyNewsletterWord"> -->
             </div>
           </div>
         </div>
