--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
       gtag('config', 'UA-121992018-3');
     </script>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link href="https://cdn.quilljs.com/1.3.7/quill.bubble.css" rel="stylesheet">
     <link rel="stylesheet" href="css\snotify-material.css">
 
+    <script src="https://cdn.quilljs.com/1.3.7/quill.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
     <script src="js\snotify.min.js"></script>
@@ -22,7 +24,6 @@
 
     <title>Newsletter Generator v2</title>
     <link rel="icon" href="imgs\icons8-news-128.png">
-
 
   </head>
   <body>
