--- a/index.html
+++ b/index.html
@@ -97,10 +97,14 @@
               <td v-if="post.img" :width="[wordSupport ? '200' : '']" style="width:200px;" :style="wordSupport ? '' : 'padding-right:25px'" valign="top"><img :src="post.img" :width="[wordSupport ? '220' : '100%']" :height="[wordSupport ? '157' : 'auto']" style="width: 100%;min-width:200px; height: auto;padding: 10px;"></td>
               <td v-if="post.img" style="width:100%;padding:10px; padding-bottom: 20px;">
                  <h2 style="margin-bottom:0;" v-html="post.title" :style="{'color': postColor(pos, 'text')}"></h2><p style="font-size: .75em;opacity: .75;" :style="{'color': postColor(pos, 'text')}" v-html="post.date"></p><p :style="{'color': postColor(pos, 'text')}" v-html="post.desc" ></p>
-                 <table class="no-borders" v-if="post.link" width="100%" border="0" cellspacing="0" cellpadding="0"> <tr> <td> <table class="no-borders" border="0" cellspacing="0" cellpadding="0" style="margin-right: calc(70%); width:30%"> <tr> <td :bgcolor="colors.button" style="padding: 12px 18px 12px 18px; border-radius:3px;" align="center"><a target="_blank" :href="post.link" style="color: #fff;text-decoration:none;"><strong style="font-weight:normal">Read More</strong></a></td> </tr> </table> </td> </tr> </table></td>
+                 <table class="no-borders" v-if="post.link" width="100%" border="0" cellspacing="0" cellpadding="0"> <tr> <td>
+                   <table class="no-borders" border="0" cellspacing="0" cellpadding="0" style="margin-right: calc(70%); width:30%"> <tr> <td :bgcolor="colors.button" style="padding: 12px 18px 12px 18px; border-radius:3px;" align="center"><a target="_blank" :href="post.link" style="color: #fff;text-decoration:none;"><strong style="font-weight:normal"><span v-if="post.linkLabel != null && post.linkLabel != ''" v-html="post.linkLabel"></span><span v-else>Read More</span></strong></a></td> </tr> </table>
+                 </td> </tr> </table></td>
               <td v-else colspan="2" style="width:600px;padding:10px; padding-bottom: 20px;">
                 <h2 style="margin-bottom:0;" :style="{'color': postColor(pos, 'text')}" v-html="post.title"></h2><p style="font-size: .75em; opacity:.75;" :style="{'color': postColor(pos, 'text')}" v-html="post.date"></p><p :style="{'color': postColor(pos, 'text')}" v-html="post.desc"></p>
-                <table class="no-borders" v-if="post.link"  width="100%" border="0" cellspacing="0" cellpadding="0"> <tr> <td> <table class="no-borders" border="0" cellspacing="0" cellpadding="0" style="margin-right: calc(70%); width:30%"> <tr> <td :bgcolor="colors.button" style="padding: 12px 18px 12px 18px; border-radius:3px;" align="center"><a target="_blank" :href="post.link" style="color: #fff;text-decoration:none;"><strong style="font-weight:normal">Read More</strong></a></td> </tr> </table> </td> </tr> </table></td>
+                <table class="no-borders" v-if="post.link"  width="100%" border="0" cellspacing="0" cellpadding="0"> <tr> <td>
+                   <table class="no-borders" border="0" cellspacing="0" cellpadding="0" style="margin-right: calc(70%); width:30%"> <tr> <td :bgcolor="colors.button" style="padding: 12px 18px 12px 18px; border-radius:3px;" align="center"><a target="_blank" :href="post.link" style="color: #fff;text-decoration:none;"><strong style="font-weight:normal"><span v-if="post.linkLabel != null && post.linkLabel != ''" v-html="post.linkLabel"></span><span v-else>Read More</span></strong></a></td> </tr> </table>
+                 </td> </tr> </table></td>
             </tr>
             <tr v-if="footer.style == '1'" style="position:relative;width: 100%; border-radius: 15px; padding: 10px; align-items: left; border-color: #f3f3f3" :style="{'background-color': colors.footer.background}">
               <td colspan="2" valign="middle" style="padding: 25px">
@@ -414,9 +418,15 @@
                         <input v-else :id="'post-date-'+pos" type="text" v-model="post.date" style="font-size: 11px" required>
                         <label :for="'post-date-'+pos">Date</label>
                       </div>
-                      <div class="form-item">
-                        <input :id="'post-link-'+pos" type="text" v-model="post.link" style="font-size: 11px" required>
-                        <label :for="'post-link-'+pos">Link</label>
+                      <div class="form-item split even">
+                        <div>
+                          <input :id="'post-link-'+pos" type="text" v-model="post.link" style="font-size: 11px" required>
+                          <label :for="'post-link-'+pos">Link</label>
+                        </div>
+                        <div>
+                          <input :id="'post-linkLabel-'+pos" type="text" v-model="post.linkLabel" style="font-size: 11px" required>
+                          <label :for="'post-linkLabel-'+pos">Read More</label>
+                        </div>
                       </div>
                       <div class="form-item">
                         <input :id="'post-img-'+pos" type="text" v-model="post.img" style="font-size: 11px" required>
