Removed CTRL + C shortcut

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
               These fields support shortcut key formatting.<hr>
               <div class="row">
                 <div class="col">
-                  <strong>CTRL + L</strong>: Left Align<br><strong>CTRL + C</strong>: Center Align<br><strong>CTRL + R</strong>: Right Align<br><strong>CTRL + R</strong>: Right Align
+                  <strong>CTRL + L</strong>: Left Align<br><strong>CTRL + E</strong>: Center Align<br><strong>CTRL + R</strong>: Right Align<br><strong>CTRL + R</strong>: Right Align
                 </div>
                 <div class="col">
                   <strong>CTRL + B</strong>: Bold<br><strong>CTRL + I</strong>: Italic<br><strong>CTRL + U</strong>: Underline
@@ -778,7 +778,7 @@
                     <div class="col">
                       <ul style="list-style-type: square">
                         <li><strong>CTRL + L</strong>: &nbsp; Left Align</li>
-                        <li><strong>CTRL + C</strong>: &nbsp; Center Align</li>
+                        <li><strong>CTRL + E</strong>: &nbsp; Center Align</li>
                         <li><strong>CTRL + R</strong>: &nbsp; Right Align</li>
                         <li><strong>CTRL + J</strong>: &nbsp; Justify Align</li>
                       </ul>
